bug fix on orders table and order form on mobile version 2

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -7,7 +7,7 @@
 
 .customCol {
 	padding: 0 !important;
-	/* padding-left: 10px !important; */
+	padding-left: 5px !important;
 }
 
 .customPanel {
